--- a/pacman/templates/pacman/pacman.html
+++ b/pacman/templates/pacman/pacman.html
@@ -12,8 +12,18 @@
 {% block title %}pac-man{% endblock %}
 
 {% block content %}
-
-    <div class="grid"></div>
-    <h3>Score: <span id="score"></span> </h3>
-    <h3>Level: <span id="level"></span> </h3>
+<div class="container mb-4 text-center justify-content-center">
+    <div class="row mb-2">
+        <div class="col-12 justify-content-center">
+            <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1711740827/pacman-logo_ylvrpu.png' }}" alt="PacMan Logo" class="img-fluid mt-2">
+            <h3 class="bg-warning text-dark mt-4">Level: <span id="level"></span> </h3>
+            <h3 class="bg-danger">Score: <span id="score"></span> </h3>
+        </div>
+    </div>
+    <div class="row mb-2">
+        <div class="col-12 d-flex justify-content-center">
+            <div class="grid"></div>      
+        </div>
+    </div>
+</div>
 {% endblock %}
