--- a/static/css/pacman/pacman.css
+++ b/static/css/pacman/pacman.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap');
+
+body {
+    font-family: "Ojuju", sans-serif;
+}
+
 .grid {
     width: 568px;
     height: 568px;
-    border: solid red;
+    border: solid rgb(255, 2, 2);
     display: flex;
     flex-wrap: wrap;
     background-color: rgb(0, 0, 0);
@@ -21,8 +27,8 @@
 }
 
 .wall {
-    background-color: rgb(115, 11, 252);
-    border: 1px solid rgb(0, 0, 0);
+    background-color: rgb(240, 193, 5);
+    border: 1px solid rgb(231, 231, 231);
 }
 
 .power-pellet {
