--- a/static/css/pacman/pacman.css
+++ b/static/css/pacman/pacman.css
@@ -90,3 +90,34 @@ body {
     border: none;
     background-color: black;
 }
+
+
+@media screen and (max-width: 768px) {
+    .grid {
+        width: 368px;
+        height: 368px;
+    }
+    .grid div {
+        width: 12.9px;
+        height: 12.9px;
+    }
+    .pac-dot {
+        background-color: rgb(255, 230, 0);
+        border: 4px solid rgb(0, 0, 0);
+    }
+}
+
+@media screen and (max-width: 396px) {
+    .grid {
+        width: 300px;
+        height: 300px;
+    }
+    .grid div {
+        width: 10.5px;
+        height: 10.5px;
+    }
+    .pac-dot {
+        background-color: rgb(255, 230, 0);
+        border: 4px solid rgb(0, 0, 0);
+    }
+}
