--- a/pacman/templates/pacman/pacman.html
+++ b/pacman/templates/pacman/pacman.html
@@ -16,6 +16,7 @@
     <div class="row mb-2">
         <div class="col-12 justify-content-center">
             <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1711740827/pacman-logo_ylvrpu.png' }}" alt="PacMan Logo" class="img-fluid mt-2">
+            <h2>Beta</h2>
             <h3 class="bg-warning text-dark mt-4">Level: <span id="level"></span> </h3>
             <h3 class="bg-danger">Score: <span id="score"></span> </h3>
         </div>
@@ -23,6 +24,22 @@
     <div class="row mb-2">
         <div class="col-12 d-flex justify-content-center">
             <div class="grid"></div>      
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 align-items-center justify-content-center">
+            <button class="btn btn-sm btn-danger d-lg-none" id="moveUpBtn"><i class="fa-solid fa-up-long pl-1 pr-1 text-center" style="color: #ffffff;"></i></button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 align-items-center justify-content-center">
+            <button class="btn btn-sm btn-danger mr-3 d-lg-none" id="moveLeftBtn"><i class="fa-solid fa-left-long" style="color: #ffffff;"></i></button>
+            <button class="btn btn-sm btn-danger ml-3 d-lg-none" id="moveRightBtn"><i class="fa-solid fa-right-long" style="color: #ffffff;"></i></button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 align-items-center justify-content-center">
+            <button class="btn btn-sm btn-danger d-lg-none" id="moveDownBtn"><i class="fa-solid fa-down-long pl-1 pr-1" style="color: #ffffff;"></i></button>
         </div>
     </div>
 </div>
