--- a/static/css/pacman/pacman.css
+++ b/static/css/pacman/pacman.css
@@ -105,6 +105,10 @@ body {
         background-color: rgb(255, 230, 0);
         border: 4px solid rgb(0, 0, 0);
     }
+    .no-border {
+        border: none;
+        background-color: black;
+    }
 }
 
 @media screen and (max-width: 396px) {
@@ -118,6 +122,10 @@ body {
     }
     .pac-dot {
         background-color: rgb(255, 230, 0);
-        border: 4px solid rgb(0, 0, 0);
+        border: 4spx solid rgb(0, 0, 0);
+    }
+    .no-border {
+        border: none;
+        background-color: black;
     }
 }
