Change Button Styles

--- a/pacman/templates/pacman/pacman.html
+++ b/pacman/templates/pacman/pacman.html
@@ -33,9 +33,9 @@
     </div>
     <div class="row">
         <div class="col-12 align-items-center justify-content-center">
-            <button class="btn btn-lg btn-warning d-lg-none" id="moveUpBtn"><i class="fa-solid fa-up-long pl-1 pr-1 text-center" style="color: #ffffff;"></i></button>
-            <button class="btn btn-lg btn-success d-lg-none" id="moveDownBtn" style="margin-right: 70px;"><i class="fa-solid fa-down-long pl-1 pr-1" style="color: #ffffff;"></i></button>
             <button class="btn btn-lg btn-info d-lg-none" id="moveLeftBtn" ><i class="fa-solid fa-left-long" style="color: #ffffff;"></i></button>
+            <button class="btn btn-lg btn-warning d-lg-none" id="moveUpBtn" style="margin-right: 70px;"><i class="fa-solid fa-up-long pl-1 pr-1 text-center" style="color: #ffffff;"></i></button>
+            <button class="btn btn-lg btn-success d-lg-none" id="moveDownBtn"><i class="fa-solid fa-down-long pl-1 pr-1" style="color: #ffffff;"></i></button>
             <button class="btn btn-lg btn-danger d-lg-none" id="moveRightBtn"><i class="fa-solid fa-right-long" style="color: #ffffff;"></i></button>
             
         </div>
