Update buttons styles of pacman game

--- a/pacman/templates/pacman/pacman.html
+++ b/pacman/templates/pacman/pacman.html
@@ -15,9 +15,9 @@
 <div class="container mb-4 text-center justify-content-center">
     <div class="row">
         <div class="col-12 justify-content-center">
-            <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1711740827/pacman-logo_ylvrpu.png' }}" alt="PacMan Logo" class="img-fluid mt-2">
+            <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1711740827/pacman-logo_ylvrpu.png' }}" alt="PacMan Logo" class="img-fluid">
             <h4>Beta</h4>
-            <h5 class="bg-warning text-dark mt-4">Level: <span id="level"></span> </h5>
+            <h5 class="bg-warning text-dark">Level: <span id="level"></span> </h5>
             <h5 class="bg-danger">Score: <span id="score"></span> </h5>
         </div>
     </div>
@@ -26,23 +26,24 @@
             <div class="grid"></div>      
         </div>
     </div>
-    <div class="row">
-        <div class="col-12 align-items-center justify-content-center">
-            
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 align-items-center justify-content-center">
-            <button class="btn btn-lg btn-info d-lg-none" id="moveLeftBtn" ><i class="fa-solid fa-left-long" style="color: #ffffff;"></i></button>
-            <button class="btn btn-lg btn-warning d-lg-none" id="moveUpBtn" style="margin-right: 70px;"><i class="fa-solid fa-up-long pl-1 pr-1 text-center" style="color: #ffffff;"></i></button>
-            <button class="btn btn-lg btn-success d-lg-none" id="moveDownBtn"><i class="fa-solid fa-down-long pl-1 pr-1" style="color: #ffffff;"></i></button>
-            <button class="btn btn-lg btn-danger d-lg-none" id="moveRightBtn"><i class="fa-solid fa-right-long" style="color: #ffffff;"></i></button>
-            
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12 align-items-center justify-content-center">
-           
+    <div class="row mb-2">
+        <div class="col-12 d-flex justify-content-center">
+            <div class="controller">
+                <button class="btn btn-sm btn-warning text-light d-lg-none" id="moveUpBtn">
+                    <i class="fa-solid fa-arrow-up"></i>
+                </button>
+                <div class="horizontal">
+                    <button class="btn btn-sm btn-primary d-lg-none" style="margin-right: 30px;" id="moveLeftBtn">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </button>
+                    <button class="btn btn-sm btn-danger d-lg-none" style="margin-left: 30px;" id="moveRightBtn">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
+                <button class="btn btn-sm btn-success d-lg-none" id="moveDownBtn">
+                    <i class="fa-solid fa-arrow-down"></i>
+                </button>
+            </div>
         </div>
     </div>
 </div>
