--- a/static/css/pacman/pacman.css
+++ b/static/css/pacman/pacman.css
@@ -92,26 +92,27 @@ body {
 }
 
 .controller {
-    width: 50%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: red solid 4px;
     border-radius: 10px;
     
 }
 
 .horizontal {
     display: flex;
+    margin-top: 4px;
+    margin-bottom: 4px;
 }
 
 .btn {
     margin: 5px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: none;
+    width: 150px;
+    height: 35px;
+    border-radius: 10%;
+    border: rgb(255, 255, 255) solid 2px;
 }
 
 .btn i {
