--- a/pacman/templates/pacman/pacman.html
+++ b/pacman/templates/pacman/pacman.html
@@ -21,7 +21,38 @@
             <h5 class="bg-danger">Score: <span id="score"></span> </h5>
         </div>
     </div>
-    <div class="row mb-2">
+    <div class="row">
+        <div class="col-12 justify-content-center">
+            <button class="bg-light mb-2 w-100" id="startGameButton">Start Game</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 justify-content-center" >
+            <button class="bg-light mb-2 w-100" style="display: none;" id="restartGameButton">Restart Game</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 justify-content-center" >
+           
+           
+                <form class="form mt-6" method="post" id="scoreForm" style="display: none;">
+                    {% csrf_token %}
+                    <div class="form-group d-flex justify-content-center"> 
+                        <input type="text" name="user_name" placeholder="Enter your name" class="mt-2 styled-input border-4 border-success rounded">
+                    </div>
+                    <div class="form-group"> 
+                        <input type="hidden" name="score" id="scoreInput">
+                    </div>
+                    <div class="form-group d-flex justify-content-center"> 
+                        <button type="submit" class="btn btn-success text-white w-50">Submit</button>
+                    </div>
+                </form>
+          
+
+        </div>
+    </div>
+
+    <div class="row mb-2" style="display: none;" id="startGame">
         <div class="col-12 d-flex justify-content-center">
             <div class="grid"></div>      
         </div>
