--- a/pacman/templates/pacman/pacman.html
+++ b/pacman/templates/pacman/pacman.html
@@ -13,30 +13,35 @@
 
 {% block content %}
 <div class="container mb-4 text-center justify-content-center">
-    <div class="row">
+    <div class="row" id="logo">
         <div class="col-12 justify-content-center">
             <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1711740827/pacman-logo_ylvrpu.png' }}" alt="PacMan Logo" class="img-fluid">
             <h4>Beta</h4>
-            <h5 class="bg-warning text-dark">Level: <span id="level"></span> </h5>
-            <h5 class="bg-danger">Score: <span id="score"></span> </h5>
+        </div>
+    </div>
+    <div class="row mt-4" id="scoreAndLevel" style="display: none;">
+        <div class="col-12 justify-content-center">
+            <h5 class="text-light bg-primary"><strong>Level: <span id="level"></span> </strong></h5>
+            <h5 class="text-light bg-danger"><strong>Score: <span id="score"></span></strong> </h5>
         </div>
     </div>
     <div class="row">
         <div class="col-12 justify-content-center">
-            <button class="bg-light mb-2 w-100" id="startGameButton">Start Game</button>
+            <button class="bg-light btn-lg mb-2 w-100 border border-danger" id="startGameButton"><strong>Start Game</strong></button>
         </div>
     </div>
     <div class="row">
         <div class="col-12 justify-content-center" >
-            <button class="bg-light mb-2 w-100" style="display: none;" id="restartGameButton">Restart Game</button>
+            <button class="bg-light btn-lg mb-2 w-100 border border-danger" style="display: none;" id="restartGameButton"><strong>Restart Game</strong></button>
         </div>
     </div>
     <div class="row">
         <div class="col-12 justify-content-center" >
-           
-           
+            
                 <form class="form mt-6" method="post" id="scoreForm" style="display: none;">
                     {% csrf_token %}
+                    <h2>Game Over!</h2>
+                    <h3>RECORD YOUR SCORE BELOW! <br> <i class="fa-solid fa-arrow-down" style="color: #ffffff;"></i></h3>
                     <div class="form-group d-flex justify-content-center"> 
                         <input type="text" name="user_name" placeholder="Enter your name" class="mt-2 styled-input border-4 border-success rounded">
                     </div>
@@ -47,31 +52,44 @@
                         <button type="submit" class="btn btn-success text-white w-50">Submit</button>
                     </div>
                 </form>
-          
-
         </div>
     </div>
-
+    <div class="row" id="leaderboard">
+        <div class="col col-md-12">
+            <div class="card text-white text-center leaderboard">
+                <h2 class="leaderboard text-light text-decoration-underline pb-3 mt-2 bg-danger" style="border-bottom: red 4px solid; border-top: red 4px solid;"><strong>Leaderboards</strong> <i class="fa-solid fa-crown" style="color: #FFD43B;"></i></h2>
+                <ul class="leaderboard">
+                    {% for game_score in game_scores %}
+                        <li><h5><strong>{{ game_score.user_name }} - {{ game_score.score }}</strong></h5><p><small class="small-text">{{ game_score.created_at }}</small></p></li>
+                    {% endfor %}
+                        <li><a href="{% url 'pacman_leaderboard' %}" class="btn btn-primary btn-block w-100">
+                            <strong>View All</strong>
+                        </a></li>
+                </ul>
+                
+            </div>
+        </div>
+    </div>
     <div class="row mb-2" style="display: none;" id="startGame">
         <div class="col-12 d-flex justify-content-center">
             <div class="grid"></div>      
         </div>
     </div>
-    <div class="row mb-2">
+    <div class="row mb-2" id="controler" style="display: none;">
         <div class="col-12 d-flex justify-content-center">
             <div class="controller">
-                <button class="btn btn-sm btn-warning text-light d-lg-none" id="moveUpBtn">
+                <button class="btn btn-sm btn-warning text-light d-lg-none btn-controler" id="moveUpBtn">
                     <i class="fa-solid fa-arrow-up"></i>
                 </button>
                 <div class="horizontal">
-                    <button class="btn btn-sm btn-primary d-lg-none" style="margin-right: 30px;" id="moveLeftBtn">
+                    <button class="btn btn-sm btn-primary d-lg-none btn-controler" style="margin-right: 60px;" id="moveLeftBtn">
                         <i class="fa-solid fa-arrow-left"></i>
                     </button>
-                    <button class="btn btn-sm btn-danger d-lg-none" style="margin-left: 30px;" id="moveRightBtn">
+                    <button class="btn btn-sm btn-danger d-lg-none btn-controler" style="margin-left: 60px;" id="moveRightBtn">
                         <i class="fa-solid fa-arrow-right"></i>
                     </button>
                 </div>
-                <button class="btn btn-sm btn-success d-lg-none" id="moveDownBtn">
+                <button class="btn btn-sm btn-success d-lg-none btn-controler" id="moveDownBtn">
                     <i class="fa-solid fa-arrow-down"></i>
                 </button>
             </div>
