--- a/static/css/pacman/pacman.css
+++ b/static/css/pacman/pacman.css
@@ -107,10 +107,10 @@ body {
     margin-bottom: 4px;
 }
 
-.btn {
-    margin: 5px;
-    width: 50px;
-    height: 35px;
+.btn-controler {
+    margin: 10px;
+    width: 70px;
+    height: 55px;
     border-radius: 10%;
     border: rgb(255, 255, 255) solid 2px;
 }
@@ -122,7 +122,36 @@ body {
 .btn:hover {
     background-color: #555;
 }
+.leaderboard {
+    padding-right: 10px; 
+    padding-left: 10px; 
+    list-style-type: none;
+    padding-top: 10px;
+    font-family: "Ojuju", sans-serif;
+}
 
+.scoreboard {
+    padding-right: 10px; 
+    padding-left: 10px; 
+    font-family: "Ojuju", sans-serif;
+}
+
+.card {
+    box-shadow: 0px 50px 50px rgba(200, 27, 27, 0.7);
+    border: red 5px solid;
+    background-color: black;
+}
+.styled-input {
+    background-color: #f0f0f0;
+    border: 2px solid #383737;
+    padding: 7px;
+    width: 50%;
+    text-align: center;
+}
+
+.small-text {
+    font-size: 0.75rem; 
+}
 
 @media screen and (max-width: 768px) {
     .grid {
