Edit pacman leadboard view and html page

--- a/space_invaders/templates/space_invaders/space-invaders-leaderboard.html
+++ b/space_invaders/templates/space_invaders/space-invaders-leaderboard.html
@@ -17,7 +17,7 @@
         <div class="col col-md-12">
             <div class="card text-white text-center leaderboard h-100" style="margin: 0; margin-bottom: 100px;">
                 <div class="bg-danger">
-                    <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1710969198/space-invaders-logo_bhjso2.png' }}" alt="Space Invaders Logo">
+                    <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1710969198/space-invaders-logo_bhjso2.png' }}" alt="Space Invaders Logo" class="img-fluid">
                 </div>
                 <a href="{% url 'space_invaders' %}" class="btn btn-lg btn-light border border-danger mt-4 text-dark"><strong>Return to Game</strong></a>
                 <h2 class="leaderboard text-white text-decoration-underline"><strong>Leaderboards</strong></h2>
