--- a/templates/includes/nav/main-nav.html
+++ b/templates/includes/nav/main-nav.html
@@ -15,6 +15,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'space_invaders' %}">Space Invaders</a>
+            <a class="dropdown-item" href="{% url 'pacman' %}">Pacman</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'index' %}">Home</a>
           </div>
