--- a/pacman/templates/pacman/pacman.html
+++ b/pacman/templates/pacman/pacman.html
@@ -23,6 +23,7 @@
         <div class="col-12 justify-content-center">
             <h5 class="text-light bg-primary"><strong>Level: <span id="level"></span> </strong></h5>
             <h5 class="text-light bg-danger"><strong>Score: <span id="score"></span></strong> </h5>
+            <h5 class="text-danger" style="display: none;" id="scared-timer"><strong>Ghost Scared Timer: <span></span></strong> </h5>
         </div>
     </div>
     <div class="row">
@@ -47,6 +48,7 @@
                     </div>
                     <div class="form-group"> 
                         <input type="hidden" name="score" id="scoreInput">
+                        <input type="hidden" name="level" id="levelInput">
                     </div>
                     <div class="form-group d-flex justify-content-center"> 
                         <button type="submit" class="btn btn-success text-white w-50">Submit</button>
@@ -60,7 +62,7 @@
                 <h2 class="leaderboard text-light text-decoration-underline pb-3 mt-2 bg-danger" style="border-bottom: red 4px solid; border-top: red 4px solid;"><strong>Leaderboards</strong> <i class="fa-solid fa-crown" style="color: #FFD43B;"></i></h2>
                 <ul class="leaderboard">
                     {% for game_score in game_scores %}
-                        <li><h5><strong>{{ game_score.user_name }} - {{ game_score.score }}</strong></h5><p><small class="small-text">{{ game_score.created_at }}</small></p></li>
+                        <li><h5><strong>{{ game_score.user_name }} - {{ game_score.score }} - Level {{ game_score.level }}</strong></h5><p><small class="small-text">{{ game_score.created_at }}</small></p></li>
                     {% endfor %}
                         <li><a href="{% url 'pacman_leaderboard' %}" class="btn btn-primary btn-block w-100">
                             <strong>View All</strong>
