Begin Work on snake game, Create snake game board and add food and snake to board. Add movement for snake around the board

--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -26,7 +26,7 @@
     <div class="card bg-info mt-2 border border-light rounded pt-2 pb-2">
         <h2>Game in Development</h2>
         <h3 class="text-light">Snake</h3>
-        <a href="#">
+        <a href="{% url 'snake' %}">
             <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1712598045/snake-logo_vnarf4.png' }}" alt="Snake Game Logo" class="img-fluid">
             <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1711487172/coming-soon_izekzy.png' }}" alt="Space Invaders Logo" class="img-fluid">
         </a>
