Update snake html page

--- a/snake/templates/snake/snake.html
+++ b/snake/templates/snake/snake.html
@@ -12,5 +12,5 @@
 {% block title %}Snake{% endblock %}
 
 {% block content %}
-    <div class="grid"></div>
+    <div class="game-board"></div>
 {% endblock %}
