create grid on the snake game board

--- a/snake/templates/snake/snake.html
+++ b/snake/templates/snake/snake.html
@@ -12,5 +12,5 @@
 {% block title %}Snake{% endblock %}
 
 {% block content %}
-    <div class="game-board"></div>
+    <div id="game-board"></div>
 {% endblock %}
