Set up render code to update render time of game

--- a/static/css/snake/snake.css
+++ b/static/css/snake/snake.css
@@ -6,3 +6,13 @@
     grid-template-rows: repeat(21, 1fr);
     grid-template-columns: repeat(21, 1fr);
 }
+
+.snake {
+    background-color: blue;
+    border: .25vmin solid black;
+}
+
+.food {
+    background-color: yellow;
+    border: .25vmin solid black;
+}
