Add Score feature to snake game

--- a/snake/templates/snake/snake.html
+++ b/snake/templates/snake/snake.html
@@ -12,5 +12,6 @@
 {% block title %}Snake{% endblock %}
 
 {% block content %}
+    <h5 class="text-light bg-danger text-center"><strong>Score: <span id="score"></span></strong> </h5>
     <div id="game-board"></div>
 {% endblock %}
