Add start game button to snake game and wrap snake game in a function for btn to work

--- a/snake/templates/snake/snake.html
+++ b/snake/templates/snake/snake.html
@@ -12,6 +12,7 @@
 {% block title %}Snake{% endblock %}
 
 {% block content %}
-    <h5 class="text-light bg-danger text-center"><strong>Score: <span id="score"></span></strong> </h5>
-    <div id="game-board"></div>
+    <button class="btn btn-primary border border-light mb-2 mt-2 text-light" id="startBtn"><strong>Start Game</strong> </button>
+    <h5 class="text-light bg-danger text-center" style="display: none;"><strong>Score: <span id="score"></span></strong> </h5>
+    <div id="game-board" style="display: none;"></div>
 {% endblock %}
