Add scoring system based on snake speed to snake game.

--- a/snake/templates/snake/snake.html
+++ b/snake/templates/snake/snake.html
@@ -57,6 +57,6 @@
         </div>
     </div>
 </div>
-    <h5 class="text-light bg-danger text-center" style="display: none;"><strong>Score: <span id="score"></span></strong> </h5>
+    <h5 class="text-light bg-danger text-center" style="display: none;" id="scoreBoard"><strong>Score: <span id="score"></span></strong> </h5>
     <div id="game-board" style="display: none;"></div>
 {% endblock %}
