--- a/static/css/snake/snake.css
+++ b/static/css/snake/snake.css
@@ -19,3 +19,35 @@
     border: .25vmin solid black;
     border-radius: 10px;
 }
+
+.controller {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    
+}
+
+.horizontal {
+    display: flex;
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+
+.btn-controler {
+    margin: 10px;
+    width: 70px;
+    height: 55px;
+    border-radius: 10%;
+    border: rgb(255, 255, 255) solid 2px;
+}
+
+.btn i {
+    font-size: 12px;
+}
+
+.btn:hover {
+    background-color: #555;
+}
