--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -24,11 +24,10 @@
         </a>
     </div>
     <div class="card bg-info mt-2 border border-light rounded pt-2 pb-2">
-        <h2>Game in Development</h2>
+        <h2>Game in Beta</h2>
         <h3 class="text-light">Snake</h3>
         <a href="{% url 'snake' %}">
             <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1712598045/snake-logo_vnarf4.png' }}" alt="Snake Game Logo" class="img-fluid">
-            <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1711487172/coming-soon_izekzy.png' }}" alt="Space Invaders Logo" class="img-fluid">
         </a>
     </div>
 </div>
