--- a/snake/templates/snake/snake.html
+++ b/snake/templates/snake/snake.html
@@ -50,7 +50,7 @@
                             <li><h5><strong>{{ game_score.user_name }} - {{ game_score.score }}</strong></h5><p><small class="small-text">{{ game_score.created_at }}</small></p></li>
                         {% endfor %}
                     </ul>
-                    <a href="{% url 'space_invaders_leaderboard' %}" class="btn btn-primary mb-4">
+                    <a href="{% url 'snake_leaderboard' %}" class="btn btn-primary mb-4">
                         <strong>View All</strong>
                     </a>
                 </div>
