--- a/snake/templates/snake/snake.html
+++ b/snake/templates/snake/snake.html
@@ -107,6 +107,13 @@
             </form>
         </div>
     </div>
+    <div class="row">
+        <div class="col col-12">
+            <div class="text-center" id="returnToSnake" style="display: none;">
+                <a href="{% url 'snake' %}" class="btn btn-danger">Return to Snake</a>
+            </div>
+        </div>
+    </div>
     <hr>
     <hr>
     <hr>
