Update nav styling and include snake in the nav bar

--- a/templates/includes/nav/main-nav.html
+++ b/templates/includes/nav/main-nav.html
@@ -6,9 +6,6 @@
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Games
@@ -16,8 +13,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'space_invaders' %}">Space Invaders</a>
             <a class="dropdown-item" href="{% url 'pacman' %}">Pacman</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'index' %}">Home</a>
+            <a class="dropdown-item" href="{% url 'snake' %}">Snake</a>
           </div>
         </li>
         {% if request.user.is_authenticated %}
@@ -36,10 +32,6 @@
           </li>
           {% endif %}
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-      </form>
       <ul class="navbar-nav">
           
       </ul>
